[tool.poetry]
name = "py-olamaps"
version = "0.3.0"
description = "Python client library for Ola Maps API Services"
authors = ["Lav Sharma <lavsharma2016@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
retrying = "^1.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
